Apply patch by Brad <bkn@ithryn.net> to disable file watch on OS X until this is properly supported by this platform.

BUG: 289330